Update 'k5fumz3p4-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:acc42a1aff1b434ed245cf591468971b64ecba6f@sha256:4a44524d4a9bd2c3460e572d630bdf803601cb04ec3b45f746c4c094aff1cac0

--- a/components/k5fumz3p4-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/k5fumz3p4-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: k5fumz3p4-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:acc42a1aff1b434ed245cf591468971b64ecba6f@sha256:4a44524d4a9bd2c3460e572d630bdf803601cb04ec3b45f746c4c094aff1cac0
+          name: container-image
